@@ -13,6 +13,7 @@ import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 /**
  * @author ziyao
@@ -50,7 +51,7 @@ public class FIleLoader {
             else
                 propertyFiles.add(getFile(path));
         }
-        return propertyFiles.stream().filter(Objects::nonNull).toList();
+        return propertyFiles.stream().filter(Objects::nonNull).collect(Collectors.toList());
     }
 
     private static File getFile(Path path) {
